@@ -30,6 +30,7 @@ News
 * **Bugfix:** [Issue #119](https://github.com/nschlia/ffmpegfs/issues/119): Fixed problem that caused frame set generation to fail sometimes. Seems to be related to the nremap() issue.
 * Generally revisited documentation, logging, and display texts. Improved grammar, formatting, and fixed quite a few typos that escaped all proofreading sessions.
 * Changed FFmpeg API INFO and DEBUG level log output to FFmpegfs DEBUG level. What FFmpeg considers "INFO" is far too chatty.
+* Reduce frequent memory reallocations when creating HLS segments to speed up processing.
 
 ### Version 2.10 has been released
 
