@@ -31,6 +31,8 @@ Important changes in 2.11 (2022-06-XX):
   formatting, and fixed quite a few typos that escaped all proofreading sessions.
 * Changed FFmpeg API INFO and DEBUG level log output to FFmpegfs DEBUG level.
   What FFmpeg considers "INFO" is far too chatty.
+* Reduce frequent memory reallocations when creating HLS segments to speed up
+  processing.
 
 Important changes in 2.10 (2022-04-26):
 
